fixed json formatting

--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,6 @@
 {
-  "crons": [
-    {
+  "crons": [{
       "path": "/api/run-image-worker",
       "schedule": "*/2 * * * *"
-    }
-  ]
+    }]
 }
